fix spacing and add font color.

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
   padding-top: 5px;
   font-family: 'Orbitron';
   font-size: 30px;
-  color:limegreen;
+  color:hotpink;
 }
 
 button {
